somehow the query for apple works

--- a/src/app/components/client-info/client-info.component.html
+++ b/src/app/components/client-info/client-info.component.html
@@ -1,1 +1,7 @@
-<p>client-info works!</p>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Food: {{ client.food }}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Nutrition</h6>
+    <p class="card-text">Calories: {{ client.calories }}</p>
+  </div>
+</div>
