--- a/src/app/components/client-info/client-info.component.html
+++ b/src/app/components/client-info/client-info.component.html
@@ -1,4 +1,9 @@
 <div class="card" style="width: 18rem;">
+  <div class="row">
+    <div class="col-md-12">
+      <button (click)="onDeleteClick()" class="btn btn-danger">Delete</button>
+    </div>
+  </div>
   <div class="card-body">
     <h5 class="card-title">Food: {{ client.food }}</h5>
     <h6 class="card-subtitle mb-2 text-muted">Nutrition</h6>
