--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -45,5 +45,5 @@
 
 <ng-template #noClients>
   <hr />
-  <h5>There are no clients in the system</h5>
+  <h5>There are no food added in your tracker</h5>
 </ng-template>
