--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,11 +10,17 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li *ngIf="!isLoggedIn" class="nav-item">
         <a class="nav-link" routerLink="/register">Register</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="!isLoggedIn" class="nav-item">
         <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item">
+        <a class="nav-link" href="#">{{ loggedUser }}</a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item">
+        <a href="#" class="nav-link" (click)="logoutClick()">Logout</a>
       </li>
     </ul>
   </div>
